--- a/examples/index.html
+++ b/examples/index.html
@@ -6,22 +6,29 @@
 </head>
 <body>
   <h3 class="title">There is <span>{number}</span> connected users.</h3>
+  <p>
+    And there is {group} of 2 users.
+  </p>
   <script src="../build/build.js"></script>
   <script>
   var Binding = require('data-binding');
   var Store = require('store');
 
   var index = 2;
+  var group = 0;
   var store = new Store({
     number: index
   });
 
   var binding = new Binding(store);
-  binding.apply(document.querySelector('.title'));
+  binding.apply(document.body);
 
   setInterval(function(){
     store.set('number', ++index);
-  }, 300);
+    if(index%2){
+      store.set('group', ++group)
+    }
+  }, 10);
   </script>
 </body>
 </html>
