--- a/examples/substitution.html
+++ b/examples/substitution.html
@@ -16,7 +16,7 @@
 
   <script src="../build/build.js"></script>
   <script>
-  var Binding = require('data-binding');
+  var Binding = require('binding');
   var Store = require('store');
   var index = 2;
   var group = 0;
