--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
     <script src="mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="../build/build.js"></script>
-    <script src="data-binding.js"></script>
+    <script src="binding.js"></script>
     <script>
       mocha.run();
     </script>
