--- a/examples/substitution.html
+++ b/examples/substitution.html
@@ -7,13 +7,13 @@
 <body>
   <!-- because binding read and trigger error on script...advanced expression :s -->
   <div class="section">
-    <h3 class="title">There is <span>{number}</span> connected users.</h3>
+    <h3 class="title">There is <span>{{number}}</span> connected users.</h3>
     <p>
-      with the id : <span>{group}group{number}</span>
+      with the id : <span>{{group}}group{{number}}</span>
     </p>
-    <a href="/ids/{number}">{id}</a>
+    <a href="/ids/{{number}}">{{id}}</a>
     <p>
-      And there is {group} groups of 2 users.
+      And there is {{group}} groups of 2 users.
     </p>
   </div>
 
@@ -29,7 +29,7 @@
 
   console.time('olivier');
   var binding = new Binding(store);
-  binding.apply(document.querySelector('.section'));
+  binding.scan(document.querySelector('.section'));
   store.compute('id', function(){
     return this.group + '' + this.number;
   });
