--- a/examples/double-way.html
+++ b/examples/double-way.html
@@ -32,7 +32,7 @@
   <script src="../build/build.js"></script>
   <script>
   var binding = require('binding'),
-      Store = require('store');
+      Store = require('datastore');
 
   binding(new Store())
   .add('input', function(node) {
