--- a/examples/plugin.html
+++ b/examples/plugin.html
@@ -10,7 +10,7 @@
   <script src="../build/build.js"></script>
   <script>
   var Binding = require('binding');
-  var Store = require('store');
+  var Store = require('datastore');
   var index = 2;
   var store = new Store({
     number: index
