--- a/examples/substitution.html
+++ b/examples/substitution.html
@@ -20,7 +20,7 @@
   <script src="../build/build.js"></script>
   <script>
   var Binding = require('binding');
-  var Store = require('store');
+  var Store = require('datastore');
   var index = 2;
   var group = 0;
   var store = new Store({
