--- a/examples/basics.html
+++ b/examples/basics.html
@@ -11,9 +11,9 @@
   </div>
   <script src="../build/build.js"></script>
   <script>
-  var binding = require('binding');
+  var cement = require('cement');
 
-  binding({
+  cement({
     github: 'bredele'
   }).scan(document.getElementById('example'));
 
