--- a/examples/substitution.html
+++ b/examples/substitution.html
@@ -19,7 +19,7 @@
 
   <script src="../build/build.js"></script>
   <script>
-  var Binding = require('binding');
+  var Binding = require('cement');
   var Store = require('datastore');
   var index = 2;
   var group = 0;
