--- a/examples/override.html
+++ b/examples/override.html
@@ -14,7 +14,7 @@
 
   <script src="../build/build.js"></script>
   <script>
-  var Binding = require('binding');
+  var Binding = require('cement');
 
   var binding = new Binding();
   binding.add('action', function(node){
