--- a/examples/plugin.html
+++ b/examples/plugin.html
@@ -9,7 +9,7 @@
 
   <script src="../build/build.js"></script>
   <script>
-  var Binding = require('binding');
+  var Binding = require('cement');
   var Store = require('datastore');
   var index = 2;
   var store = new Store({
