--- a/examples/computed.html
+++ b/examples/computed.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Basics</title>
+  <title>Computed properties</title>
 </head>
 <body>
   <div id="example">
@@ -10,19 +10,21 @@
   </div>
   <script src="../build/build.js"></script>
   <script>
-  var cement = require('cement'),
-      Store = require('datastore'), 
-      store = new Store({});
+  var cement = require('cement');
+  var Store = require('datastore'); 
+  var store = new Store({});
 
   store.compute('name', function() {
     return this.firstName + ' ' + this.lastName;
   });
+
   cement(store).scan(document.getElementById('example'));
 
   setTimeout(function(){
     store.set('firstName', 'olivier');
     store.set('lastName', 'Wietrich');
   }, 1000);
+
   </script>
 </body>
 </html>
